tests/paczka1/fuzzy1/16735875.err
Error in line 1: S319 S475 19,7
Error in line 2: R7e8 S319 8,9
Error in line 3: S319 S579 30,8
Error in line 9: S319 S475 64,1
Error in line 14: DC44gGYzrle S475 21,7
Error in line 17: S319 S579 74,2
Error in line 19: S319 S319 35,1
Error in line 28: 7TAimwXi S319 45,1
Error in line 36: DC44gGYzrle S475 49,9
